# Gymnasium

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CNAME  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  DictSpaceDebug.ipynb  LICENSE.md  LICENSE.txt  README.md  a.py  blog.md  index.html  objects.inv  py.Dockerfile  pyproject.toml  requirements.txt  searchindex.js  setup.py  t.py  test_requirements.txt  tmp_SpecStack_usage.py  tmp_SpecStack_usage_experimental_wrapper.py  tmp_ezpickle_wrappers.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  proposal.md  proposal.yml  question.yml
.github/workflows/: build-docs.yml  build-publish.yml  build.yml  docs-build-dev.yml  docs-build-release.yml  docs-manual-build.yml  docs-manual-versioning.yml  docs-versioning.yml  linkcheck.yml  pre-commit.yml  pypi-publish.yml  run-pre-commit.yml  run-pytest.yml  run-tutorial.yml
0.27.0/: .buildinfo  objects.inv
README/: index.html
_downloads/01a413564c9bff768b24ed43b946607d/: environment_creation.py
_downloads/0f28446f9f426c9833f40d61857a6f21/: environment_creation.ipynb
_downloads/3831a62128c6d96d80d039f936893259/: environment_creation.ipynb
_downloads/46c1a6ff1aae3b48b3379fddfeca0650/: handling_time_limits.ipynb
_downloads/50e7c09c20b787d0a5bd70c4aeb0a515/: vector_envs_tutorial.ipynb
_downloads/5bd8b56318388cc6c3585454b47469d9/: mujoco_reinforce.ipynb
_downloads/6ae5209ec80e231987d889c490d131a9/: FrozenLake_tuto.ipynb
_downloads/7720e20eb2c7f37162a67699a7b0ba23/: FrozenLake_tuto.py
_downloads/b0e7aa582a7b3c32ccdef133cbd779c5/: blackjack_tutorial.ipynb
_downloads/b4e38e84e3b5c293cbde554ccbba7111/: implementing_custom_wrappers.ipynb
_downloads/c5364859a73a7f575f592a0ad6aa1b73/: reinforce_invpend_gym_v26.ipynb
_downloads/e1249c888e952c938d27855c3210a4bb/: blackjack_tutorial.py
_downloads/e688a889564af5a98daa8accfbca806e/: vector_envs_tutorial.py
_downloads/f568409c70f62ce68a7552285b9724db/: action_masking_taxi.ipynb
_downloads/fedb802640e3ee4762d570997604c039/: vector_a2c.ipynb
_modules/: index.html
_static/: documentation_options.js
_static/css/: custom.css
_static/scripts/: furo.js.map
_static/styles/: furo-extensions.css  furo-extensions.css.map  furo.css  furo.css.map
_static/versioning/: versioning_menu.html
api/core/: index.html
api/env/: index.html
api/experimental/: index.html
api/functional/: index.html
api/registry/: index.html
api/spaces/: index.html
api/spaces_utils/: index.html
api/utils/: index.html
api/vector/: index.html
api/wrappers/: index.html
content/basic_usage/: index.html
content/environment_creation/: index.html
content/gym_compatibility/: index.html
content/handling_timelimits/: index.html
content/migration-guide/: index.html
content/vectorising/: index.html
docs/: .gitignore  404.md  README.md  conf.py  index.md  pip install pygame  requirements.txt
docs/_scripts/: atari-docs.json  gen_atari_table.py  gen_envs_display.py  gen_gifs.py  gen_mds.py  gen_wrapper_table.py  linkcheck.py  utils.py
docs/_templates/: base.html  page.html
docs/_tutorials/: example.py
docs/api/: core.md  env.md  experimental.md  functional.md  registry.md  spaces.md  spaces_utils.md  utils.md  vector.md  wrappers.md
docs/content/: basic_usage.md  environment_creation.md  gym_compatibility.md  handling_timelimits.md  migration-guide.md  release_notes.md  terminated-truncated-api.md  vectorising.md
docs/environments/: .htaccess  atari.md  box2d.md  classic_control.md  mujoco.md  third_party_environments.md  toy_text.md
docs/gym_release_notes/: gym_v0.19.0.md  gym_v0.20.0.md  gym_v0.22.0.md  gym_v0.24.0.md  gym_v0.24.1.md  gym_v0.25.1.md  gym_v0.25.2.md  gym_v0.26.1.md  gym_v0.26.2.md  index.md
docs/gymnasium_release_notes/: index.md
docs/introduction/: basic_usage.md  create_custom_env.md  create_custom_env.py  gym_compatibility.md  migration-guide.md  migration_guide.md  record_agent.md  recording_agents.md  speed_up_env.md  train_agent.md
docs/release_notes/: gym_v0.19.0.md  gym_v0.21.0.md  gym_v0.23.0.md  gym_v0.23.1.md  gym_v0.25.0.md  gym_v0.26.0.md  gymnasium_v0.26.0.md  gymnasium_v0.26.1.md  gymnasium_v0.26.2.md  gymnasium_v0.26.3.md  gymnasium_v0.27.0.md  index.md
docs/scripts/: atari-docs.json  gen_atari_table.py  gen_envs_display.py  gen_gifs.py  gen_mds.py  gen_tutorials.py  move_404.py  utils.py
docs/tutorials/: FrozenLake_tuto.py  README.rst  blackjack_tutorial.ipynb  blackjack_tutorial.py  demo.py  environment_creation.py  handling_time_limits.py  implementing_custom_wrappers.py  run_python310_example.py  (+5 more)
examples/: README.md  file.py  func.py  game.py  main.py
genindex/: index.html
gym/: core.py
gym_release_notes/: index.html
gymnasium/: __init__.py  _random.py  core.py  dataclasses.py  error.py  functional.py  logger.py  wrapperspec.py
gymnasium_release_notes/: index.html
main/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
playground/: cheetha_test.py  s.py  soccer_test.py
py-modindex/: index.html
scripts/: analyze_lunar_lander_angular_dynamics.py  compare_lunar_lander_fixed_actions.py  compare_lunar_lander_pymunk_algorithms.py  compare_lunar_lander_pymunk_ppo.py  pymunk_lunar_lander_terrain.py  sweep_pymunk_lunar_lander_solver_iterations.py
search/: index.html
tests/: __init__.py  generic_test_env.py  test_core.py  testing_env.py
tutorials/: index.html
v0.26.3/: 404.html  index.html  objects.inv  searchindex.js
v0.27.0/: searchindex.js
v0.27.1/: .buildinfo  404.html  objects.inv  searchindex.js
v0.28.1/: .buildinfo  objects.inv
v0.29.0/: 404.html  index.html  objects.inv
v1.0.0/: .buildinfo  404.html  index.html  searchindex.js
v1.0.0a1/: .buildinfo  index.html  objects.inv
v1.0.0a2/: .buildinfo
v1.1.0/: .buildinfo  objects.inv  searchindex.js
v1.1.1/: 404.html  searchindex.js
v1.2.0/: 404.html  index.html
v1.2.1/: .buildinfo  404.html  searchindex.js
v1.2.2/: .buildinfo  404.html
v1.2.3/: .buildinfo  index.html
v1.3.0/: .buildinfo  404.html
(+2948 files in other folders)
