# Package ######################################################################

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gymnasium"
description = "A standard API for reinforcement learning and a diverse set of reference environments (formerly Gym)."
readme = "README.md"
requires-python = ">= 3.10"
authors = [{ name = "Farama Foundation", email = "contact@farama.org" }]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "game", "RL", "AI", "gymnasium"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy >=1.21.0",
    "cloudpickle >=1.2.0",
    "typing-extensions >=4.3.0",
    "farama-notifications >=0.0.1",
]
dynamic = ["version"]

[project.optional-dependencies]
# Update dependencies in `all` if any are added or removed
atari = ["ale_py >=0.9"]
box2d = ["box2d ==2.3.10", "pygame-ce >=2.1.3", "swig ==4.*"]
classic-control = ["pygame-ce >=2.1.3"]
classic_control = ["pygame-ce >=2.1.3"]  # kept for backward compatibility
mujoco = ["mujoco >=2.1.5, <3.5.0", "imageio >=2.14.1", "packaging >=23.0"]
toy-text = ["pygame-ce >=2.1.3"]
toy_text = ["pygame-ce >=2.1.3"] # kept for backward compatibility
jax = [
    "jax >=0.4.16",
    "jaxlib >=0.4.16",
    "flax >=0.5.0",
    "array-api-compat >=1.11.0",
    "numpy>=2.1",
]
torch = ["torch >=1.13.0", "array-api-compat >=1.11.0", "numpy>=2.1"]
array-api = ["array-api-compat >=1.11.0", "numpy>=2.1", "packaging >=23.0"]
other = [
    "moviepy >=1.0.0",
    "matplotlib >=3.0",
    "opencv-python >=3.0",
    "seaborn >= 0.13",
]
all = [
    # All dependencies above except accept-rom-license
    # NOTE: No need to manually remove the duplicates, setuptools automatically does that.
    # atari
    "ale_py >=0.9",
    # box2d
    "box2d-py ==2.3.5",
    "pygame-ce >=2.1.3",
    "swig ==4.*",
    # classic-control
    "pygame-ce >=2.1.3",
    # mujoco
    "mujoco >=2.1.5, <3.5.0",
    "imageio >=2.14.1",
    "packaging >=23.0",
    # toy-text
    "pygame-ce >=2.1.3",
    # jax
    "jax >=0.4.16",
    "jaxlib >=0.4.16",
    "flax >= 0.5.0",
    "array-api-compat >=1.11.0",
    "numpy>=2.1",
    # torch
    "torch >=1.13.0",
    "array-api-compat >=1.11.0",
    "numpy>=2.1",
    # array-api
    "array-api-compat >=1.11.0",
    "numpy>=2.1",
    # other
    "opencv-python >=3.0",
    "matplotlib >=3.0",
    "moviepy >=1.0.0",
]

testing = [
    "pytest >=7.1.3",
    "scipy >=1.7.3",
    "dill >=0.3.7",
    "array_api_extra >=0.7.0",
]

[project.urls]
Homepage = "https://farama.org"
Repository = "https://github.com/Farama-Foundation/Gymnasium"
Documentation = "https://gymnasium.farama.org"
"Bug Report" = "https://github.com/Farama-Foundation/Gymnasium/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["gymnasium", "gymnasium.*"]

[tool.setuptools.package-data]
gymnasium = [
    "envs/mujoco/assets/*.xml",
    "envs/classic_control/assets/*.png",
    "envs/phys2d/assets/*.png",
    "envs/toy_text/font/*.ttf",
    "envs/toy_text/img/*.png",
    "py.typed",
]

[tool.ruff.lint]
 select = [
      "E",  # pycodestyle errors
      "F",  # pyflakes
      "UP", # pyupgrade
      "I",  # isort
      "D",  # pydocstyle
      "B",  # bugbear
]
ignore = [
    "E501"
]
# Ideas: "COM", "C4", "EXE", "FA", "ISC", "PT", "Q", "RSE", "SIM", "TC", "NPY", "RUF"

[tool.ruff.lint.per-file-ignores]
# Disable all docstring rules
"gymnasium/envs/box2d/*" = ["D"]  # TODO remove
"gymnasium/envs/classic_control/*" = ["D"]  # TODO remove
"gymnasium/envs/mujoco/*" = ["D"]  # TODO remove
"gymnasium/envs/toy_text/*" = ["D"]  # TODO remove
"tests/*" = ["D"]  # TODO remove
"docs/*" = ["D"]  # TODO remove

"gymnasium/envs/mujoco/mujoco_rendering.py" = ["UP031"]

"gymnasium/envs/phys2d/pendulum.py" = ["E741"]
"gymnasium/envs/phys2d/cartpole.py" = ["E741"]
"gymnasium/envs/classic_control/pendulum.py" = ["E741"]
"gymnasium/envs/classic_control/cartpole.py" = ["E741"]
"gymnasium/envs/classic_control/mountain_car.py" = ["E741"]
"gymnasium/envs/classic_control/continuous_mountain_car.py" = ["E741"]
"gymnasium/envs/classic_control/acrobot.py" = ["E741"]
"gymnasium/envs/box2d/bipedal_walker.py" = ["E741"]

"docs/tutorials/**/*.py" = ["E402", "B007"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
include = ["gymnasium"]
exclude = ["tests", "**/node_modules", "**/__pycache__"]

[tool.ty.environment]
python-version = "3.10"
python-platform = "all"
extra-paths = []

[tool.ty.rules]
index-out-of-bounds = "warn"              # TODO remove
invalid-argument-type = "warn"            # TODO remove
invalid-assignment = "warn"               # TODO remove
invalid-method-override = "warn"          # TODO remove
invalid-parameter-default = "warn"        # TODO remove
invalid-return-type = "warn"              # TODO remove
no-matching-overload = "warn"             # TODO remove
missing-argument = "warn"                 # TODO remove
not-subscriptable = "warn"                # TODO remove
too-many-positional-arguments = "warn"    # TODO remove
unresolved-attribute = "warn"             # TODO remove
unresolved-import = "warn"                # TODO remove
unsupported-operator = "warn"             # TODO remove

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:gymnasium.*:"]
